Wed Jun 27 12:58:23 UTC 2012  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/KeyedWriter/Sender/Writer_Sender_exec.h:
          Removed a double declared forward declaration of Sender_exec_i.

        * connectors/dds4ccm/tests/ListenOneByOne/Sender/LOBO_Test_Sender.idl:
        * connectors/dds4ccm/tests/ListenOneByOne/Sender/LOBO_Test_Sender_exec.h:
        * connectors/dds4ccm/tests/ListenOneByOne/Sender/LOBO_Test_Sender_exec.cpp:
        * connectors/dds4ccm/tests/ListenOneByOne/descriptors/Plan.cdp:
          Start the writing of samples upon a publication matched event.

Wed Jun 27 12:45:56 UTC 2012  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/ListenNotEnabled/Sender/LNE_Test_Sender.idl:
        * connectors/dds4ccm/tests/ListenNotEnabled/Sender/LNE_Test_Sender_exec.h:
        * connectors/dds4ccm/tests/ListenNotEnabled/Sender/LNE_Test_Sender_exec.cpp:
        * connectors/dds4ccm/tests/ListenNotEnabled/descriptors/Plan.cdp:
          Start the writing of samples upon a publication matched event.

Wed Jun 27 11:51:29 UTC 2012  Marcel Smit  <msmit@remedy.nl>

        * tests/TTSCTest/Sender/Sender.mpc:
        * tests/TTSCTest/TTSConnector/TTSConnector.mpc:
          Fixed link issues on windows. This also fixes afters seen
          on RedHat.

Wed Jun 27 11:23:34 UTC 2012  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/PSLSampleLost/Sender/PSL_SampleLost_Sender.idl:
        * connectors/dds4ccm/tests/PSLSampleLost/Sender/PSL_SampleLost_Sender_exec.h:
        * connectors/dds4ccm/tests/PSLSampleLost/Sender/PSL_SampleLost_Sender_exec.cpp:
        * connectors/dds4ccm/tests/PSLSampleLost/descriptors/Plan.cdp:
        * connectors/dds4ccm/tests/PSLSampleLost/descriptors/run_test.pl:
          Start the writing upon a publication matched event.

Tue Jun 26 09:32:12 UTC 2012  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/CSLSampleRejected/descriptors/HelloTest_Library.xml: